# advent-of-code

./: .gitignore  README.md  pyproject.toml
aoc2022/: day1.py  pyproject.toml
aoc2022/puzzles/: day01_ex2.py
aoc2022/solver/: day02_ex1.py  day02_ex2.py  day05_ex1.py  day05_ex2.py  day06_ex1.py  day06_ex2.py  day07_ex1.py  day07_ex2.py  day08_ex1.py  day08_ex2.py
aoc2022/tests/: test_day01.py  test_day02.py  test_day05.py  test_day06.py  test_day07.py
aoc2023/: pyproject.toml
aoc2023/day01/: test_day01.py
aoc2023/day01/ex1/: solver.py
aoc2023/day01/ex2/: solver.py
aoc2023/day02/: test_day02.py
aoc2023/day02/ex1/: solver.py
aoc2023/day02/ex2/: solver.py
aoc2023/day03/: test_day03.py
aoc2023/day03/ex1/: solver.py
aoc2023/day03/ex2/: solver.py
aoc2023/day04/: test_day04.py
aoc2023/day04/ex1/: solver.py
aoc2023/day04/ex2/: solver.py
aoc2023/day05/: test_day05.py
aoc2023/day05/ex1/: solver.py
aoc2023/day05/ex2/: solver.py
aoc2023/day06/: test_day06.py
aoc2023/day06/ex1/: solver.py
aoc2023/day06/ex2/: solver.py
aoc2023/day07/: test_day07.py
aoc2023/day07/ex1/: solver.py  test.txt
aoc2023/day07/ex2/: solver.py
aoc2023/day08/: test_day08.py
aoc2023/day08/ex1/: solver.py
aoc2023/day08/ex2/: solver.py
aoc2023/day09/: test_day09.py
aoc2023/day09/ex1/: solver.py
aoc2023/day09/ex2/: solver.py
aoc2023/day10/: test_day10.py
aoc2023/day10/ex1/: solver.py  test_2.txt
aoc2023/day10/ex2/: solver.py  test_4.txt  test_5.txt
aoc2023/day11/: test_day11.py
aoc2023/day11/ex1/: solver.py
aoc2023/day11/ex2/: solver.py
aoc2023/day12/: test_day12.py
aoc2023/day12/ex1/: solver.py
aoc2023/day12/ex2/: solver.py
aoc2023/day13/ex1/: solver.py
aoc2023/day13/ex2/: solver.py
aoc2024/: pyproject.toml
aoc2024/day1/: solution.py
aoc2024/day2/: ex.txt  solution.py
(+82 files in other folders)
