[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Théophane Vié <theophanevie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
black = "22.3.0"
isort = "^5.10.1"
click = "8.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.black]
line-length = 120
