[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Théophane Vié <theophane.vie@petit-nuage.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.7.1"
tqdm = "^4.66.5"
coverage-badge = "^1.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.ruff]
line-length = 120
exclude = ["__pycache__", "venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
